cors, fix reload on routing, transaction component